--- a/debs/openldap/debian/control
+++ b/debs/openldap/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 10),
                groff-base,
                heimdal-multidev (>= 7.4.0.dfsg.1-1~) <!stage1>,
                libdb5.3-dev <!stage1>,
+               libkrb5-dev <!stage1>,
                libltdl-dev <!stage1>,
                libperl-dev (>= 5.8.0) <!stage1>,
                libsasl2-dev,
