--- a/debs/openldap/debian/rules
+++ b/debs/openldap/debian/rules
@@ -58,7 +58,7 @@ get-orig-source:
 	wget $(URL)/openldap-$(VERSION).tgz -O ../openldap_$(VERSION).orig.tar.gz
 	tar xzf ../openldap_$(VERSION).orig.tar.gz --strip-components=1 -C .
 
-DH = dh $@ --builddirectory=$(builddir)
+DH = dh $@ --with quilt,autoreconf,systemd --builddirectory=$(builddir) --parallel
 .PHONY: build
 build:
 	$(DH)
