openldap: Add smbkrb5pwd as a patch to openldap package, plus changes to the build system to it actually gets built.

--- a/debs/openldap/debian/rules
+++ b/debs/openldap/debian/rules
@@ -103,6 +103,11 @@ ifeq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
 	for mod in $(CONTRIB_MODULES); do \
 		dh_auto_build -Dcontrib/slapd-modules/$$mod -Bcontrib/slapd-modules/$$mod -- $(CONTRIB_MAKEVARS) || exit $$?; \
 	done
+	$(MAKE) -C contrib/slapd-modules/smbk5pwd CC=$(CC)
+	$(MAKE) -C contrib/slapd-modules/smbkrb5pwd CC=$(CC)
+	$(MAKE) -C contrib/slapd-modules/autogroup CC=$(CC)
+	$(MAKE) -C contrib/slapd-modules/lastbind CC=$(CC)
+	$(MAKE) -C contrib/slapd-modules/passwd/sha2 CC=$(CC)
 endif
 
 override_dh_auto_test:
@@ -118,6 +123,11 @@ ifeq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
 	for mod in $(CONTRIB_MODULES); do \
 		dh_auto_install -Dcontrib/slapd-modules/$$mod -Bcontrib/slapd-modules/$$mod -- $(CONTRIB_MAKEVARS) || exit $$?; \
 	done
+	$(MAKE) -C contrib/slapd-modules/smbk5pwd install DESTDIR=$(installdir)
+	$(MAKE) -C contrib/slapd-modules/smbkrb5pwd install DESTDIR=$(installdir)
+	$(MAKE) -C contrib/slapd-modules/autogroup install DESTDIR=$(installdir)
+	$(MAKE) -C contrib/slapd-modules/lastbind install DESTDIR=$(installdir)
+	$(MAKE) -C contrib/slapd-modules/passwd/sha2 install DESTDIR=$(installdir)
 
 	# Empty the dependency_libs file in the .la files.
 	for F in $(installdir)/usr/lib/ldap/*.la; do \
@@ -143,6 +153,13 @@ endif
 	# Upstream manpages are section 8C but installed as section 8
 	find $(installdir)/usr/share/man -name \*.8 \
 		| xargs perl -pi -e 's#(\.TH \w+ 8)C#$$1#'
+
+ifeq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
+override_dh_install-arch:
+	dh_install
+	rm -rf $(CURDIR)/debian/slapd/usr/lib/ldap/smbk5pwd*
+	rm -rf $(CURDIR)/debian/slapd/usr/lib/ldap/smbkrb5pwd*
+endif
 
 override_dh_installinit:
 	dh_installinit -- "defaults 19 80"
@@ -210,4 +227,8 @@ ifeq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
 	for mod in $(CONTRIB_MODULES); do \
 		dh_auto_clean -Dcontrib/slapd-modules/$$mod -Bcontrib/slapd-modules/$$mod || exit $?; \
 	done
+	rm -rf contrib/slapd-modules/smbkrb5pwd/.libs \
+		contrib/slapd-modules/smbkrb5pwd/smbkrb5pwd.lo \
+		contrib/slapd-modules/smbkrb5pwd/smbkrb5pwd.la \
+		contrib/slapd-modules/smbkrb5pwd/smbkrb5pwd.o
 endif
