--- a/debs/openldap/debian/control
+++ b/debs/openldap/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 10),
                dpkg-dev (>= 1.17.14),
                groff-base,
                heimdal-multidev (>= 7.4.0.dfsg.1-1~) <!stage1>,
+               krb5-multidev,
                libdb5.3-dev <!stage1>,
                libkrb5-dev <!stage1>,
                libltdl-dev <!stage1>,
@@ -124,3 +125,13 @@ Description: development libraries for OpenLDAP SLAPI plugin interface
  This package allows development of plugins for the OpenLDAP slapd server
  using the SLAPI interface.  It includes the headers and libraries needed
  to build such plugins.
+
+Package: slapd-smbkrb5pwd
+Section: net
+Priority: optional
+Architecture: any
+Pre-Depends: debconf (>= 0.5) | debconf-2.0
+Depends: ${shlibs:Depends}, libkrb5-3, slapd, ${misc:Depends}
+Description: Samba / MIT Kerberos password overlay module for slapd
+ smbkrb5pwd extends password change operations to synchronously change
+ passwords in MIT Kerberos and Samba.
