openldap: Compile with openssl instead of gnutls.

--- a/debs/openldap/debian/control
+++ b/debs/openldap/debian/control
@@ -10,10 +10,10 @@ Build-Depends: debhelper (>= 10),
                groff-base,
                heimdal-multidev (>= 7.4.0.dfsg.1-1~) <!stage1>,
                libdb5.3-dev <!stage1>,
-               libgnutls28-dev,
                libltdl-dev <!stage1>,
                libperl-dev (>= 5.8.0) <!stage1>,
                libsasl2-dev,
+               libssl-dev,
                libwrap0-dev <!stage1>,
                nettle-dev <!stage1>,
                perl:any,
