Fix fluentd.service startup, /state/fluentd-buffer must be created as root.

--- a/debs/fluentd/debian/fluentd.service
+++ b/debs/fluentd/debian/fluentd.service
@@ -2,6 +2,7 @@
 Description = Fluentd
 
 [Service]
+PermissionsStartOnly = true
 ExecStartPre = /bin/mkdir -p /state/fluentd-buffer
 ExecStartPre = /bin/chown fluentd:fluentd /state/fluentd-buffer
 Environment = GEM_HOME=/usr/lib/fluentd-gem
