--- a/parts/fluent-plugin-puavo/Makefile
+++ b/parts/fluent-plugin-puavo/Makefile
@@ -1,4 +1,10 @@
-prefix = /usr/local
+prefix = /usr
+
+libdir = $(prefix)/lib
+sysconfdir = /etc
+
+INSTALL = install -p
+INSTALL_DATA = $(INSTALL) -m 644
 
 .PHONY: all
 all:
@@ -6,22 +12,18 @@ all:
 
 .PHONY: install-dirs
 install-dirs:
-	mkdir -p $(DESTDIR)/usr/lib/ruby/vendor_ruby/fluent/plugin
+	mkdir -p $(DESTDIR)$(libdir)/ruby/vendor_ruby/fluent/plugin
+	mkdir -p $(DESTDIR)$(sysconfdir)/fluent/conf.d
 
 .PHONY: install
 install: install-dirs
-	cp -a out_puavo.rb $(DESTDIR)/usr/lib/ruby/vendor_ruby/fluent/plugin
+	$(INSTALL_DATA) -t $(DESTDIR)$(libdir)/ruby/vendor_ruby/fluent/plugin out_puavo.rb
+
+	$(INSTALL_DATA) -t $(DESTDIR)$(sysconfdir)/fluent/conf.d fluent-plugin-puavo.conf
 
 .PHONY: test
 test:
-	bundle exec ruby1.9.1 test/out_puavo_test.rb
+	bundle exec ruby test/out_puavo_test.rb
 
 .PHONY: clean
 clean:
-
-.PHONY: deb
-deb:
-	rm -rf debian
-	cp -a debian.default debian
-	puavo-dch $(shell cat VERSION)
-	dpkg-buildpackage -us -uc
