ltspservers are not more, update fluent-plugin-puavo.conf.

--- a/parts/fluent-plugin-puavo/fluent-plugin-puavo.conf
+++ b/parts/fluent-plugin-puavo/fluent-plugin-puavo.conf
@@ -25,8 +25,8 @@
       flush_interval 60s
     </device>
 
-    <device ltspserver|fatclient>
-      ## ltsp servers and fat clients just forwards packets to a boot server on a
+    <device fatclient>
+      ## fat clients just forwards packets to a boot server on a
       ## local network. Small flush interval is ok.
       flush_interval 1s
     </device>
