--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -287,6 +287,7 @@ Depends: ${misc:Depends},
  libpam-runtime,
  libsasl2-modules-gssapi-mit,
  libsasl2-modules-ldap,
+ netcat-openbsd,
  nfs-common,
  nslcd,
  ntp,
