--- a/debs/Makefile
+++ b/debs/Makefile
@@ -7,6 +7,7 @@ _pkgs_ports     := autopoweroff    \
                    nwjs            \
                    visionmedia-mon \
                    vtun            \
+                   wine            \
                    wpa             \
                    $(_lsb_release_ports)
 _pkgs_image     := $(_pkgs_parts) $(_pkgs_ports)
