Add puavo-pkg-wine-helper that should help with wine package installation.  Used by "ti-nspire-cx-cas-ss" and "casio-classpad-manager-for-ii" (that were renamed to more exact descriptions).

--- a/parts/pkg/Makefile
+++ b/parts/pkg/Makefile
@@ -22,6 +22,7 @@ install: installdirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
 		puavo-pkg \
 		puavo-pkg-updater \
+		puavo-pkg-wine-helper \
 		puavo-test-puavo-pkg-installers \
 		puavo-update-remote-pkginstaller-bundle
 
