Hook gvfs-package to build.

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -4,6 +4,7 @@ _pkgs_ports     := autopoweroff    \
                    fluentd         \
                    gnome-shell     \
                    grub2           \
+                   gvfs            \
                    nwjs            \
                    unicode-data    \
                    visionmedia-mon \
