Add a missing comma into openboard control-file.

--- a/debs/openboard/debian/control
+++ b/debs/openboard/debian/control
@@ -30,7 +30,7 @@ Depends: libc6,
  libqt5core5a,
  libqt5gui5,
  libqt5multimedia5,
- libqt5multimedia5-plugins
+ libqt5multimedia5-plugins,
  libqt5multimediawidgets5,
  libqt5network5,
  libqt5printsupport5,
