Add webmenu launcher for Peda.net.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -623,6 +623,10 @@ items:
     url: http://dreamschool.fi
     osIconPath: /opt/webmenu/extra/icons/apps/unelmakoulu.png
   - type: web
+    name: Peda.net
+    url: https://peda.net/:loginopinsys
+    osIconPath: /usr/share/icons/Faenza/mimetypes/96/text-html.png
+  - type: web
     name: Viope
     url: https://www.viope.com/
     osIconPath: /usr/share/icons/Faenza/mimetypes/96/text-html.png
