Use "cwm" instead of "ratpoison" as a lightweight intermediate window manager when presenting webkiosk language selector. "cwm" is not verbose.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -274,6 +274,7 @@ Architecture: all
 Depends: ${misc:Depends},
  autofs,
  cowsay,
+ cwm,
  daemon,
  dnsutils,
  gdm3,
@@ -302,7 +303,6 @@ Depends: ${misc:Depends},
  python,
  python-appindicator,
  python-gtk2,
- ratpoison,
  ruby-dnsruby,
  ruby-json,
  ruby-ldap,
