--- a/rules/cups/files/cupsd.conf
+++ b/rules/cups/files/cupsd.conf
@@ -26,6 +26,12 @@ DefaultAuthType Basic
 # Web interface setting...
 WebInterface Yes
 
+# In a puavo-os system users normally belong to "lpadmin"-group,
+# but only as a runtime supplementary group, and cups servers
+# do not know about this, so generally @SYSTEM does not apply
+# to puavo-os users.  Cups configurations are manipulated at login time,
+# however.
+
 # Restrict access to the server...
 <Location />
   Order allow,deny
@@ -64,27 +70,27 @@ WebInterface Yes
   </Limit>
 
   <Limit Send-Document Send-URI Hold-Job Release-Job Restart-Job Purge-Jobs Set-Job-Attributes Create-Job-Subscription Renew-Subscription Cancel-Subscription Get-Notifications Reprocess-Job Cancel-Current-Job Suspend-Current-Job Resume-Job Cancel-My-Jobs Close-Job CUPS-Move-Job CUPS-Get-Document>
-    Require user @OWNER @SYSTEM
+    Require user @OWNER
     Order deny,allow
   </Limit>
 
   # All administration operations require an administrator to authenticate...
   <Limit CUPS-Add-Modify-Printer CUPS-Delete-Printer CUPS-Add-Modify-Class CUPS-Delete-Class CUPS-Set-Default CUPS-Get-Devices>
     AuthType Default
-    Require user @SYSTEM
+    Require valid-user
     Order deny,allow
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
   <Limit Pause-Printer Resume-Printer Enable-Printer Disable-Printer Pause-Printer-After-Current-Job Hold-New-Jobs Release-Held-New-Jobs Deactivate-Printer Activate-Printer Restart-Printer Shutdown-Printer Startup-Printer Promote-Job Schedule-Job-After Cancel-Jobs CUPS-Accept-Jobs CUPS-Reject-Jobs>
     AuthType Default
-    Require user @SYSTEM
+    Require valid-user
     Order deny,allow
   </Limit>
 
   # Only the owner or an administrator can cancel or authenticate a job...
   <Limit Cancel-Job CUPS-Authenticate-Job>
-    Require user @OWNER @SYSTEM
+    Require user @OWNER
     Order deny,allow
   </Limit>
 
@@ -109,28 +115,28 @@ WebInterface Yes
 
   <Limit Send-Document Send-URI Hold-Job Release-Job Restart-Job Purge-Jobs Set-Job-Attributes Create-Job-Subscription Renew-Subscription Cancel-Subscription Get-Notifications Reprocess-Job Cancel-Current-Job Suspend-Current-Job Resume-Job Cancel-My-Jobs Close-Job CUPS-Move-Job CUPS-Get-Document>
     AuthType Default
-    Require user @OWNER @SYSTEM
+    Require user @OWNER
     Order deny,allow
   </Limit>
 
   # All administration operations require an administrator to authenticate...
   <Limit CUPS-Add-Modify-Printer CUPS-Delete-Printer CUPS-Add-Modify-Class CUPS-Delete-Class CUPS-Set-Default>
     AuthType Default
-    Require user @SYSTEM
+    Require valid-user
     Order deny,allow
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
   <Limit Pause-Printer Resume-Printer Enable-Printer Disable-Printer Pause-Printer-After-Current-Job Hold-New-Jobs Release-Held-New-Jobs Deactivate-Printer Activate-Printer Restart-Printer Shutdown-Printer Startup-Printer Promote-Job Schedule-Job-After Cancel-Jobs CUPS-Accept-Jobs CUPS-Reject-Jobs>
     AuthType Default
-    Require user @SYSTEM
+    Require valid-user
     Order deny,allow
   </Limit>
 
   # Only the owner or an administrator can cancel or authenticate a job...
   <Limit Cancel-Job CUPS-Authenticate-Job>
     AuthType Default
-    Require user @OWNER @SYSTEM
+    Require user @OWNER
     Order deny,allow
   </Limit>
 
