Change DefaultTimeoutStopSec in /etc/systemd/system.conf from 90 seconds to 8 seconds.  Xorg is one of the (many?) processes that may sometimes get confused when receiving HUP and TERM close to each other, and does not die until KILL, slowing shut down. See https://github.com/systemd/systemd/issues/1615 for description. Closes #264.

--- a/rules/systemd/files/system.conf
+++ b/rules/systemd/files/system.conf
@@ -33,7 +33,7 @@
 #DefaultStandardOutput=journal
 #DefaultStandardError=inherit
 #DefaultTimeoutStartSec=90s
-#DefaultTimeoutStopSec=90s
+DefaultTimeoutStopSec=8s
 #DefaultRestartSec=100ms
 #DefaultStartLimitIntervalSec=10s
 #DefaultStartLimitBurst=5
