Replace Open Sankore launcher with Open Board.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -339,7 +339,7 @@ items:
     type: desktop
   - source: tellico
     type: desktop
-  - source: Open-Sankore
+  - source: openboard
     type: desktop
   - source: primusclient
     type: desktop
@@ -530,7 +530,7 @@ items:
     type: desktop
   - source: smarttech-SMARTBoardTools
     type: desktop
-  - source: Open-Sankore
+  - source: openboard
     type: desktop
   - source: ebeam
     type: desktop
