Add anki, a flashcards-based studying program.

--- a/rules/webmenu/templates/desktop.d/default-overrides.yaml
+++ b/rules/webmenu/templates/desktop.d/default-overrides.yaml
@@ -21,6 +21,9 @@ acroread:
   keywords:
   - pdf
   name: Acroread-asiakirjakatselin
+anki:
+  name:
+    fi: Anki-muistikortit
 arduino:
   name:
     en: Arduino IDE
