--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -298,6 +298,8 @@ items:
     inactiveByDeviceType: thinclient
   - source: qgis
     type: desktop
+  - source: anki
+    type: desktop
 - type: menu
   name:
     en: Office
