Puavo-os build needs a particular version of nodejs that contains npm, the package maintained by the Debian-project will not do.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -18,7 +18,7 @@ Build-Depends: bundler | ruby-bundler,
  libsqlite3-dev,
  libssl1.0-dev,
  libtool-bin,
- nodejs,
+ nodejs (>= 4.8.6-1nodesource1),
  pkg-config,
  pyqt4-dev-tools,
  pyqt5-dev-tools,
