Install the 02-plymouth initramfs-script.

--- a/parts/core/Makefile
+++ b/parts/core/Makefile
@@ -39,7 +39,8 @@ install : installdirs
 		initramfs-tools/scripts/init-top/puavo
 	$(INSTALL_PROGRAM) \
 		-t $(DESTDIR)$(datarootdir)/initramfs-tools/scripts/puavo-postmount \
-		initramfs-tools/scripts/puavo-postmount/01-mount
+		initramfs-tools/scripts/puavo-postmount/01-mount \
+		initramfs-tools/scripts/puavo-postmount/02-plymouth
 	$(INSTALL_PROGRAM) -t $(DESTDIR)/sbin init-puavo
 
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/initramfs-tools/conf.d \
