Mark "unicode-data" as a build-dependency for other packages ("wine" specifically) and build it (and update repo) before building others.

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -1,4 +1,8 @@
+# a newer version of unicode-data is a dependency for wine
+_pkgs_builddeps := unicode-data
+
 # parts & ports packages go into puavo-os images
+
 _pkgs_parts     := puavo-os
 _pkgs_ports     := autopoweroff    \
                    fluentd         \
@@ -8,30 +12,35 @@ _pkgs_ports     := autopoweroff    \
                    mutter          \
                    nwjs            \
                    openboard       \
-                   unicode-data    \
                    visionmedia-mon \
                    vtun            \
                    wine            \
                    wpa
-_pkgs_image     := $(_pkgs_parts) $(_pkgs_ports)
+_pkgs_image     := $(_pkgs_builddeps) $(_pkgs_parts) $(_pkgs_ports)
 
 # cloud packages do NOT go into puavo-os images
 _pkgs_cloud     := krb5 openldap puavo-ds
 
-_dpkg_buildpackage_cloud := $(_pkgs_cloud:%=.dpkg-buildpackage-%)
-_dpkg_buildpackage_parts := $(_pkgs_parts:%=.dpkg-buildpackage-%)
-_dpkg_buildpackage_ports := $(_pkgs_ports:%=.dpkg-buildpackage-%)
-_dpkg_buildpackage       := $(_pkgs_image:%=.dpkg-buildpackage-%)
+_dpkg_buildpackage_builddeps := $(_pkgs_builddeps:%=.dpkg-buildpackage-%)
+_dpkg_buildpackage_cloud     := $(_pkgs_cloud:%=.dpkg-buildpackage-%)
+_dpkg_buildpackage_parts     := $(_pkgs_parts:%=.dpkg-buildpackage-%)
+_dpkg_buildpackage_ports     := $(_pkgs_ports:%=.dpkg-buildpackage-%)
+_dpkg_buildpackage           := $(_pkgs_image:%=.dpkg-buildpackage-%)
 
-_install_build_deps_cloud := $(_pkgs_cloud:%=.install-build-deps-%)
-_install_build_deps_parts := $(_pkgs_parts:%=.install-build-deps-%)
-_install_build_deps_ports := $(_pkgs_ports:%=.install-build-deps-%)
-_install_build_deps       := $(_pkgs_image:%=.install-build-deps-%)
+_install_build_deps_builddeps := $(_pkgs_builddeps:%=.install-build-deps-%)
+_install_build_deps_cloud     := $(_pkgs_cloud:%=.install-build-deps-%)
+_install_build_deps_parts     := $(_pkgs_parts:%=.install-build-deps-%)
+_install_build_deps_ports     := $(_pkgs_ports:%=.install-build-deps-%)
+_install_build_deps           := $(_pkgs_image:%=.install-build-deps-%)
 
 _workdir = .workdir
 
 .PHONY: all
 all: $(_dpkg_buildpackage)
+	$(MAKE) update-repo
+
+.PHONY: builddeps
+builddeps: $(_dpkg_buildpackage_builddeps)
 	$(MAKE) update-repo
 
 .PHONY: cloud
@@ -76,6 +85,9 @@ $(_workdir):
 	cd .archive && apt-ftparchive \
 	    -o APT::FTPArchive::Release::Origin=puavo-os release . > Release
 
+.PHONY: install-build-deps-builddeps
+install-build-deps-builddeps: $(_install_build_deps_builddeps)
+
 .PHONY: install-build-deps-cloud
 install-build-deps-cloud: $(_install_build_deps_cloud)
 
@@ -86,7 +98,7 @@ install-build-deps-parts: $(_install_build_deps_parts)
 install-build-deps-ports: $(_install_build_deps_ports)
 
 .PHONY: install-build-deps
-install-build-deps: $(_install_build_deps)
+install-build-deps: builddeps $(_install_build_deps)
 
 .install-build-deps-%: % apt_update
 	@env PUAVOOS_SUDO='$(_sudo)' \
