Add freecad to menu. Closes #304.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -99,6 +99,8 @@ items:
     inactiveByDeviceType: thinclient
   - source: photofilmstrip
     type: desktop
+  - source: freecad
+    type: desktop
 - type: menu
   name:
     en: Internet
