--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -281,7 +281,7 @@ items:
     type: desktop
   - source: wxMaxima
     type: desktop
-  - source: ti_nspire_cx_cas
+  - source: ti_nspire_cx_cas_ss
     type: desktop
   - source: ghemical
     type: desktop
@@ -503,9 +503,8 @@ items:
     type: desktop
   - source: wxMaxima
     type: desktop
-  - source: ti_nspire_cx_cas
+  - source: ti_nspire_cx_cas_ss
     type: desktop
-    condition: "env.PUAVO_TAG_TI_NSPIRE_CX_CAS"
   - source: LoggerPro
     type: desktop
   - source: dia
